--- a/templates/components/post/vote_control.html
+++ b/templates/components/post/vote_control.html
@@ -25,8 +25,9 @@
 
     </button>
 
-    <h1 
+    <h1
         class="
+            vote_count
             {% if content in user_upvoted_posts or content in user_downvoted_posts %}
                 text-white
             {% endif %}"
