redesign recent posts

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
                 postContent.classList.add("line-clamp-50", "overflow-hidden", "text-ellipsis");
             });
 
-            const postImages = document.querySelectorAll(".post-content img");
+            const postImages = document.querySelectorAll(".post-content.post-item img");
             postImages.forEach((postImage) => {
                 postImage.classList.add("max-w-[300px]");
             });
