--- a/templates/components/post/post_item.html
+++ b/templates/components/post/post_item.html
@@ -40,7 +40,7 @@
 </div>
 
 <h1 class="font-bold text-xl">{{ post.title }}</h1>
-<span class="post-content">{{ post.content }}</span>
+<span class="post-content post-item">{{ post.content }}</span>
 
 <!-- VOTES AND COMMENTS -->
 <!-- VOTES -->
