--- a/templates/components/post/comment_control.html
+++ b/templates/components/post/comment_control.html
@@ -1,5 +1,5 @@
 {% load utils %}
-<div class="flex flex-row gap-2 items-center px-3 py-1 rounded-xl">
+<div class="flex flex-row gap-2 items-center px-3 py-1 rounded-xl border">
     <svg rpl="" aria-hidden="true" class="icon-comment" fill="currentColor" height="20" icon-name="comment-outline" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
         <path d="M10 19H1.871a.886.886 0 0 1-.798-.52.886.886 0 0 1 .158-.941L3.1 15.771A9 9 0 1 1 10 19Zm-6.549-1.5H10a7.5 7.5 0 1 0-5.323-2.219l.54.545L3.451 17.5Z"></path>
     </svg>
