--- a/templates/components/post/comment_item.html
+++ b/templates/components/post/comment_item.html
@@ -69,7 +69,7 @@
             <div class="flex flex-row gap-4 mt-4">
                 {% include 'components/post/vote_control.html' with content=comment.comment type='comment' %}
                     <button 
-                        class="flex flex-row gap-2 items-center justify-center px-2 py-1 rounded-xl"
+                        class="flex flex-row gap-2 items-center justify-center px-2 py-1 rounded-xl border"
                         {% if not user.is_authenticated %} 
                             data-modal-target="sign_in_modal"
                             data-modal-toggle="sign_in_modal"
