--- a/templates/base.html
+++ b/templates/base.html
@@ -66,13 +66,13 @@
                         bg_1: "#F5F4F6",
                     },
                     keyframes: {
-                        slideIn: {
-                            '0%': { opacity: '0', transform: 'translateX(100%)' },
-                            '100%': { opacity: '1', transform: 'translateX(0)' },
+                        fadeIn: {
+                            '0%': { opacity: '0', },
+                            '100%': { opacity: '1', },
                         },
                     },
                     animation: {
-                        slideIn: 'slideIn 0.3s ease-out forwards',
+                        fadeIn: 'fadeIn 0.3s ease-out forwards',
                     },
                 },
             }
@@ -90,9 +90,38 @@
         text-gray-700
     ">
     {% include 'components/navbar.html'%}
+
+    {% if messages %}
+        {% for message in messages %}
+            <div id="toast-default" class="animate-fadeIn fixed top-10 left-1/2 transform -translate-x-1/2 z-50 flex items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg shadow" role="alert">
+                {% if message.tags == 'success'%}
+                    <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200">
+                        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+                        </svg>
+                        <span class="sr-only">Check icon</span>
+                    </div>
+                {% elif message.tags == 'error'%}
+                    <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-orange-500 bg-orange-100 rounded-lg dark:bg-orange-700 dark:text-orange-200">
+                        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM10 15a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 0 1-2 0V6a1 1 0 0 1 2 0v5Z"/>
+                        </svg>
+                        <span class="sr-only">Warning icon</span>
+                    </div>
+                {% endif %}
+
+                    <div class="ms-3 text-sm font-normal">{{ message }}</div>
+                    <button type="button" onclick = "document.getElementById('toast-default').remove()" class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8" aria-label="Close">
+                        <span class="sr-only">Close</span>
+                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                        </svg>
+                    </button>
+            </div>
+        {% endfor %}
+    {% endif %}
+
     {% include 'components/image_modal.html'%}
-
-
 
     {% block content %} {% endblock %}
 
