--- a/templates/components/post/vote_control.html
+++ b/templates/components/post/vote_control.html
@@ -7,6 +7,9 @@
         {% if not user.is_authenticated %} 
             data-modal-target="sign_in_modal"
             data-modal-toggle="sign_in_modal"
+            onclick = "
+                event.stopPropagation(); 
+            "
         {% else %}
             onclick="
                 event.stopPropagation(); 
